# kleinmann-orm

./: CHANGELOG.md  CHANGELOG.old.rst  CONTRIBUTORS.rst  Makefile  README.md  README.old.rst  conftest.py  pyproject.toml
.github/workflows/: ci.yml  gh-pages-release.yml  gh-pages.yml  pypi.yml  release.yml  test.yml
docs/: CONTRIBUTING.rst  Makefile  cli.rst  conf.py  connections.rst  databases.rst  exceptions.rst  expressions.rst  fields.rst  functions.rst  getting_started.rst  index.rst  indexes.rst  logging.rst  manager.rst  migration.rst  models.rst  query.rst  router.rst  schema.rst  setup.rst  signals.rst  sphinx_autodoc_typehints.py  timezone.rst  transactions.rst  type_globals.py  validators.rst  versions.json
docs/contrib/: aiohttp.rst  blacksheep.rst  fastapi.rst  linters.rst  mysql.rst  postgres.rst  pydantic.rst  quart.rst  sanic.rst  starlette.rst  unittest.rst
docs/examples/: quart.rst
examples/: basic.py  basic_comments.py  complex_filtering.py  complex_prefetching.py  enum_fields.py  functions.py  group_by.py  manual_sql.py  postgres.py  relations.py  relations_recursive.py  relations_with_unique.py  router.py  schema_create.py  signals.py  transactions.py  two_databases.py
examples/aiohttp/: README.rst  main.py  models.py
examples/blacksheep/: README.md  models.py  server.py
examples/fastapi/: README.rst  _tests.py  config.py  main.py  main_custom_timezone.py  models.py  routers.py  schemas.py
examples/pydantic/: basic.py  early_init.py  recursive.py  tutorial_1.py  tutorial_2.py  tutorial_3.py  tutorial_4.py
examples/quart/: README.rst  main.py  models.py
examples/sanic/: README.rst  main.py
examples/starlette/: README.rst  main.py  models.py
kleinmann/: __init__.py  expressions.py  filters.py  functions.py  indexes.py  log.py  manager.py  models.py  query_utils.py  queryset.py  timezone.py  transactions.py  utils.py  validators.py
kleinmann/backends/asyncpg/: client.py  executor.py  schema_generator.py
kleinmann/backends/base/: client.py  config_generator.py  executor.py  schema_generator.py
kleinmann/backends/base_postgres/: client.py  executor.py
kleinmann/backends/mssql/: client.py  executor.py  schema_generator.py
kleinmann/backends/mysql/: client.py  executor.py  schema_generator.py
kleinmann/backends/odbc/: client.py  executor.py
kleinmann/backends/oracle/: client.py  executor.py  (+1 more)
kleinmann/fields/: base.py  data.py  relational.py
scripts/backports/: sync-cursor  sync.sh
src/kleinmann/: __init__.py  connection.py  exceptions.py  expressions.py  filters.py  functions.py  indexes.py  models.py  query_utils.py  queryset.py  router.py  transactions.py  utils.py
src/kleinmann_core/: __init__.py  analytics.py  functions.py  queries.py  terms.py  utils.py
tests/: test_aggregation.py  test_basic.py  test_bulk.py  test_callable_default.py  test_case_when.py  test_concurrency.py  test_connection.py  test_default.py  test_early_init.py  test_filtering.py  test_filters.py  test_fuzz.py  test_group_by.py  test_inheritance.py  test_manager.py  test_manual_sql.py  test_model_methods.py  test_only.py  test_order_by.py  test_order_by_nested.py  test_prefetching.py  test_primary_key.py  test_q.py  test_queryset.py  test_relations.py  test_relations_with_unique.py  test_signals.py  test_source_field.py  test_transactions.py  test_two_databases.py  test_unique_together.py  test_update.py  test_validators.py  test_values.py  test_version.py  testmodels.py  testmodels_mysql.py  testmodels_postgres.py
tests/backends/: test_capabilities.py  test_connection_params.py  test_db_url.py  test_explain.py  test_mysql.py  test_postgres.py  test_reconnect.py
tests/contrib/: test_decorator.py  test_fastapi.py  test_functions.py  test_pydantic.py  test_tester.py
tests/core/: test_aggregate.py  test_analytic_queries.py  test_create.py  test_criterions.py  test_custom_functions.py  test_data_types.py  test_date_math.py  test_deletes.py  test_drop.py  test_formats.py  test_functions.py  test_groupby_modifiers.py  test_immutability.py  test_inserts.py  test_internals.py  test_joins.py  test_negation.py  test_parameter.py  test_pseudocolumns.py  test_query.py  test_selects.py  test_tables.py  test_terms.py  test_tuples.py  test_updates.py
tests/fields/: subclass_fields.py  subclass_models.py  test_array.py  test_binary.py  test_bool.py  test_char.py  test_common.py  test_db_index.py  test_decimal.py  test_enum.py  test_fk.py  test_fk_uuid.py  test_fk_with_unique.py  test_float.py  test_int.py  test_json.py  test_m2m.py  test_m2m_uuid.py  test_o2o_with_unique.py  test_subclass.py  test_subclass_filters.py  test_text.py  test_time.py  test_uuid.py
tests/model_setup/: init.json  init.yaml  model_bad_rel1.py  model_bad_rel2.py  model_bad_rel3.py  model_bad_rel4.py  model_bad_rel5.py  model_bad_rel6.py  model_bad_rel7.py  model_bad_rel8.py  model_bad_rel9.py  model_generated_nonint.py  model_multiple_pk.py  model_nonpk_id.py  models__models__bad.py  models__models__good.py  models_dup1.py  models_dup2.py  models_dup3.py  test__models__.py  test_bad_relation_reference.py  test_init.py
tests/schema/: models_cyclic.py  models_fk_1.py  models_fk_2.py  models_fk_3.py  models_m2m_1.py  models_mysql_index.py  models_no_auto_create_m2m.py  models_no_db_constraint.py  models_o2o_2.py  models_o2o_3.py  models_postgres_index.py  models_schema_create.py  test_generate_schema.py
tests/utils/: test_describe_model.py  test_run_async.py
tortoise/: expressions.py  models.py
(+60 files in other folders)
